# docs/swagger.yaml
@@ -1,4 +1,4 @@
-basePath: /measures
+basePath: /api/*
 definitions:
   models.Measure:
     properties:
@@ -10,6 +10,8 @@ definitions:
         type: string
       updated_at:
         type: string
+    required:
+    - description
     type: object
 info:
   contact: {}
@@ -31,6 +33,71 @@ paths:
           schema:
             type: object
       summary: Get all measures
+      tags:
+      - Measures
+    post:
+      description: create measure
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Measure'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            type: object
+      summary: Create measure
+      tags:
+      - Measures
+  /api/measures/{id}:
+    delete:
+      description: delete measure
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Measure'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            type: object
+      summary: Delete measure
+      tags:
+      - Measures
+    get:
+      description: find measure
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Measure'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            type: object
+      summary: Find measure
+      tags:
+      - Measures
+    post:
+      description: update measure
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Measure'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            type: object
+      summary: Update measure
       tags:
       - Measures
 swagger: "2.0"
